--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav
-        class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 bg-white  w-full mx-auto max-w-screen-2xl transition-all z-50">
+        class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 bg-white  w-full mx-auto max-w-screen-2xl  z-50">
         <a class="w-8 md:w-12 mr-6" href=""><img src="./images/workflow-mark-indigo-600.svg" /></a>
         <div class="text-base lg:text-lg hidden md:flex items-center" data-scrollToList="">
             <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer"
@@ -59,7 +59,7 @@
     </nav>
     <section class="max-w-screen-2xl mx-auto" id="section-1">
         <div class="flex h-auto lg:h-full flex-wrap items-center">
-            <div class="w-full lg:w-1/2 lg:h-full lg:m-auto p-4 md:py-8 lg:px-6">
+            <div class="w-full lg:w-1/2 lg:h-full lg:m-auto p-4 md:py-8 lg:pl-12">
                 <h1
                     class="text-5xl md:text-6xl font-bold text-gray-900 w-full md:pr-10 text-center lg:text-left md:w-4/5 mx-auto lg:w-auto">
                     Data to enrich your
@@ -87,7 +87,7 @@
             </div>
         </div>
     </section>
-    <section class="px-4 pb-10 pt-20 text-center max-w-screen-2xl mx-auto" id="feature">
+    <section class="px-4 pb-10 pt-32 text-center max-w-screen-2xl mx-auto" id="feature">
         <div class="w-auto max-w-3xl mx-auto py-12">
             <h2 class="text-base text-indigo-700 text-medium md:font-semibold mb-2">
                 TRANSACTION
@@ -199,10 +199,7 @@
             </button>
         </div>
     </section>
-    <!--
-        revel section with animation
-    -->
-    <section class="py-6 px-4 md:py-12 md:px-6 max-w-screen-2xl mx-auto" id="pricing">
+    <section class="py-6 px-4 md:py-12 md:px-6 max-w-screen-2xl mx-auto lg:pt-32" id="pricing">
         <div class="flex flex-col flex-wrap">
             <h1 class="text-4xl md:text-5xl text-gray-900 font-bold text-center mb-4">
                 Pricing Plans
@@ -390,21 +387,21 @@
             eveniet?
         </p>
         <div class="flex flex-wrap sm:flex-row justify-center items-center py-6 ">
-            <div class="w-auto">
+            <div class="w-1/2 md:1/3 mb-1">
                 <h1 class="text-4xl md:text-5xl font-bold text-indigo-600 px-4 mb-2 text-center mx-4 md:mx-10"
                     data-countdown-rn="">
                     0%
                 </h1>
                 <p class="font-medium text-gray-500 text-lg block text-center mt-2">Runtime</p>
             </div>
-            <div class="w-auto">
+            <div class="w-1/2 md:1/3 mb-1">
                 <h1 class="text-4xl md:text-5xl font-bold text-indigo-600 px-4 mb-2 text-center mx-4 md:mx-10"
                     data-countdown-data="">
                     0%
                 </h1>
                 <p class="font-medium text-gray-500 text-lg block text-center mt-2">Less data</p>
             </div>
-            <div class="w-auto">
+            <div class="w-1/2 md:1/3 mb-1">
                 <h1 class="text-4xl md:text-5xl font-bold text-indigo-600 px-4 mb-2 text-center mx-4 md:mx-10"
                     data-countdown-cus="">
                     0+
@@ -413,9 +410,6 @@
             </div>
         </div>
     </section>
-    <!-- 
-        Companys logo here like show off you're clients
-    -->
     <footer
         class="max-w-screen-2xl m-2 md:m-4 md:mx-8 h-auto mx-auto flex flex-wrap justify-between md:justify-start lg:justify-between px-4 md:px-6 py-10 border-t-2 border-gray-200 mt-10">
         <div class="w-96 mx-3 sm:mx-8 md:mx-3">
