--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </button>
         </div>
     </section>
-    <section class="py-6 px-4 md:py-12 md:px-6 max-w-screen-2xl mx-auto lg:pt-32" id="pricing">
+    <section class="pb-4 pt-20 px-4 md:py-12 md:px-6 max-w-screen-2xl mx-auto lg:pt-32" id="pricing">
         <div class="flex flex-col flex-wrap">
             <h1 class="text-4xl md:text-5xl text-gray-900 font-bold text-center mb-4">
                 Pricing Plans
