--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav
-        class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 bg-white  w-full mx-auto max-w-screen-2xl  z-50">
+        class="flex justify-between md:justify-start py-8 px-4 md:px-12 bg-white transition-transform transform w-full mx-auto max-w-screen-2xl  z-50">
         <a class="w-8 md:w-12 mr-6" href=""><img src="./images/workflow-mark-indigo-600.svg" /></a>
         <div class="text-base lg:text-lg hidden md:flex items-center" data-scrollToList="">
             <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer"
@@ -57,7 +57,7 @@
             </div>
         </div>
     </nav>
-    <section class="max-w-screen-2xl mx-auto" id="section-1">
+    <section class="max-w-screen-2xl mx-auto overflow-hidden" id="section-1">
         <div class="flex h-auto lg:h-full flex-wrap items-center">
             <div class="w-full lg:w-1/2 lg:h-full lg:m-auto p-4 md:py-8 lg:pl-12">
                 <h1
@@ -387,22 +387,22 @@
             eveniet?
         </p>
         <div class="flex flex-wrap sm:flex-row justify-center items-center py-6 ">
-            <div class="w-1/2 md:1/3 mb-1">
-                <h1 class="text-4xl md:text-5xl font-bold text-indigo-600 px-4 mb-2 text-center mx-4 md:mx-10"
+            <div class="w-1/2 md:w-1/3 mb-1">
+                <h1 class="text-4xl md:text-5xl font-bold text-indigo-600  mb-2 text-center"
                     data-countdown-rn="">
                     0%
                 </h1>
                 <p class="font-medium text-gray-500 text-lg block text-center mt-2">Runtime</p>
             </div>
-            <div class="w-1/2 md:1/3 mb-1">
-                <h1 class="text-4xl md:text-5xl font-bold text-indigo-600 px-4 mb-2 text-center mx-4 md:mx-10"
+            <div class="w-1/2 md:w-1/3 mb-1">
+                <h1 class="text-4xl md:text-5xl font-bold text-indigo-600  mb-2 text-center"
                     data-countdown-data="">
                     0%
                 </h1>
                 <p class="font-medium text-gray-500 text-lg block text-center mt-2">Less data</p>
             </div>
-            <div class="w-1/2 md:1/3 mb-1">
-                <h1 class="text-4xl md:text-5xl font-bold text-indigo-600 px-4 mb-2 text-center mx-4 md:mx-10"
+            <div class="w-1/2 md:w-1/3 mb-1">
+                <h1 class="text-4xl md:text-5xl font-bold text-indigo-600  mb-2 text-center"
                     data-countdown-cus="">
                     0+
                 </h1>
