--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav
-        class="flex justify-between md:justify-start py-8 px-4 md:px-12 bg-white transition-transform transform w-full mx-auto max-w-screen-2xl  z-50">
+        class="flex justify-between md:justify-start py-4 px-4 md:px-12 bg-white w-full mx-auto max-w-screen-2xl  z-50">
         <a class="w-8 md:w-12 mr-6" href=""><img src="./images/workflow-mark-indigo-600.svg" /></a>
         <div class="text-base lg:text-lg hidden md:flex items-center" data-scrollToList="">
             <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer"
